--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
+    "axios": "^1.6.2",
     "env": "^0.0.2",
     "gsap": "^3.12.2",
     "prettier": "^3.1.0",
