--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.2.9",
     "axios": "^1.6.2",
     "env": "^0.0.2",
+    "framer-motion": "^10.17.9",
     "gsap": "^3.12.2",
     "prettier": "^3.1.0",
     "react": "^18.2.0",
