--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_CAT_API=https://api.thecatapi.com/v1/images/search
+VITE_EMAIL=mailto:kieron.thomas321@hotmail.co.uk
+VITE_GITHUB=https://github.com/kieronthomas132?tab=repositories
+VITE_LINKEDIN=http://linkedin.com/in/kieron-thomas-aa6038266/
