--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nextui-org/react": "^2.2.9",
     "animejs": "^3.2.2",
+    "env": "^0.0.2",
     "framer-motion": "^10.18.0",
     "gsap": "^3.12.5",
     "next-themes": "^0.2.1",
@@ -19,8 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router": "^6.21.3",
-    "react-router-dom": "^6.21.3",
+    "react-router": "^6.22.3",
+    "react-router-dom": "^6.22.3",
     "react-spring": "^9.7.3",
     "swiper": "^11.0.5",
     "typewriter-effect": "^2.21.0",
