--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
+VITE_WHATSAPP_NUMBER=https://wa.me/447706472841
 VITE_EMAIL=mailto:kieron.thomas321@hotmail.co.uk
-VITE_GITHUB=https://github.com/kieronthomas132?tab=repositories
-VITE_LINKEDIN=http://linkedin.com/in/kieron-thomas-aa6038266/
