--- a/package.json
+++ b/package.json
@@ -10,22 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@nextui-org/react": "^2.2.9",
-    "animejs": "^3.2.2",
+    "@nextui-org/react": "^2.2.10",
     "env": "^0.0.2",
-    "framer-motion": "^10.18.0",
-    "gsap": "^3.12.5",
-    "next-themes": "^0.2.1",
-    "prettier": "^3.2.1",
+    "framer-motion": "^11.0.28",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
-    "react-spring": "^9.7.3",
-    "swiper": "^11.0.5",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "typewriter-effect": "^2.21.0",
-    "use-sound": "^4.0.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
